# open-in-tilix

./: README.md  meson.build
data/: meson.build  open-in-tilix.appdata.xml
extension/: meson.build  open-in-tilix.py
po/: POTFILES  open-in-tilix.pot  update_potfile.sh
